using System.Collections;
using UnityEngine;
using UnityEngine.AI;

public class DragonAI : MonoBehaviour
{
    public Transform player;

    public float chaseDistance = 30f;
    public float attackDistance = 10f;
    public float waitBeforeAttack = 1.2f;
    public float rotationSpeed = 3f;

    // ğŸ”¥ Dash ê´€ë ¨ ë³€ìˆ˜
    public float dashDistance = 22f;  
    public float dashCooldown = 5f;   
    private bool isDashing = false;
    private bool dashAvailable = true;

    // ğŸ”¥ Fire Breath ê´€ë ¨
    public ParticleSystem fireBreathFX;
    public float fireDamageDistance = 12f;
    public float fireDamageInterval = 0.2f;
    public int fireDamageAmount = 20;     // ğŸ”¥ ë°ë¯¸ì§€ ìˆ˜ì¹˜ ì¶”ê°€
    private bool isBreathingFire = false;

    private NavMeshAgent agent;
    private Animator anim;

    private bool isWaiting = false;
    private bool isAttacking = false;
    private bool isCoolingDown = false;

    void Start()
    {
        agent = GetComponent<NavMeshAgent>();
        anim = GetComponent<Animator>();
    }

    void Update()
    {
        if (player == null) return;

        float distance = Vector3.Distance(transform.position, player.position);

        // ============================
        // ê³µê²© ì• ë‹ˆë©”ì´ì…˜ ë„ì¤‘
        // ============================
        if (isAttacking)
        {
            agent.isStopped = true;
            anim.SetBool("Walk", false);
            LookAtPlayer();
            return;
        }

        // ============================
        // ê³µê²© ì¤€ë¹„ ì¤‘
        // ============================
        if (isWaiting)
        {
            agent.isStopped = true;
            anim.SetBool("Walk", false);
            LookAtPlayer();
            return;
        }

        // ============================
        // ê³µê²© í›„ ì¿¨íƒ€ì„
        // ============================
        if (isCoolingDown)
        {
            agent.isStopped = true;
            anim.SetBool("Walk", false);
            LookAtPlayer();
            return;
        }

        // ============================
        // ğŸŒ€ Dash ì¡°ê±´
        // ============================
        if (distance > dashDistance && dashAvailable && !isDashing)
        {
            StartCoroutine(DoDash());
            return;
        }

        // ============================
        // ê³µê²© ê±°ë¦¬
        // ============================
        if (distance <= attackDistance)
        {
            StartCoroutine(PrepareAndAttack());
            return;
        }

        // ============================
        // ì¶”ì 
        // ============================
        if (distance <= chaseDistance)
        {
            ChasePlayer();
        }
        else
        {
            agent.isStopped = true;
            anim.SetBool("Walk", false);
        }
    }

    // ======================
    // í”Œë ˆì´ì–´ ë°”ë¼ë³´ê¸°
    // ======================
    void LookAtPlayer()
    {
        Vector3 dir = player.position - transform.position;
        dir.y = 0;
        if (dir.magnitude < 0.1f) return;

        Quaternion rot = Quaternion.LookRotation(dir);
        transform.rotation = Quaternion.Slerp(transform.rotation, rot, Time.deltaTime * rotationSpeed);
    }

    // ======================
    // Chase
    // ======================
    void ChasePlayer()
    {
        if (isDashing) return;

        anim.SetBool("Walk", true);
        agent.isStopped = false;
        agent.SetDestination(player.position);
    }

    // ======================
    // ê³µê²© ì¤€ë¹„ â†’ ê³µê²©
    // ======================
    IEnumerator PrepareAndAttack()
    {
        if (isWaiting || isAttacking || isCoolingDown)
            yield break;

        isWaiting = true;

        agent.isStopped = true;
        anim.SetBool("Walk", false);
        LookAtPlayer();

        yield return new WaitForSeconds(waitBeforeAttack);

        isWaiting = false;
        isAttacking = true;

        anim.SetTrigger("Attack");
    }

    // ======================
    // ê³µê²© ì¢…ë£Œ
    // ======================
    public void OnAttackEnd()
    {
        StopFireBreath(); 
        isAttacking = false;
        StartCoroutine(AttackCooldown());
    }

    IEnumerator AttackCooldown()
    {
        isCoolingDown = true;
        yield return new WaitForSeconds(2f);
        isCoolingDown = false;
    }

    // ======================
    // Dash ê¸°ëŠ¥
    // ======================
    IEnumerator DoDash()
    {
        dashAvailable = false;
        isDashing = true;

        agent.isStopped = true;
        anim.SetTrigger("Dash");

        LookAtPlayer();

        yield return new WaitForSeconds(1.0f);

        isDashing = false;

        yield return new WaitForSeconds(dashCooldown);
        dashAvailable = true;
    }

    // ======================
    // ğŸ”¥ ë¶ˆ ë¸Œë ˆìŠ¤ ì‹œì‘ (Animation Event)
    // ======================
    public void StartFireBreath()
    {
        if (fireBreathFX == null) return;

        fireBreathFX.Play();
        isBreathingFire = true;

        StartCoroutine(FireDamageLoop());
    }

    // ======================
    // ğŸ”¥ ë¶ˆ ë¸Œë ˆìŠ¤ ì¢…ë£Œ (Animation Event)
    // ======================
    public void StopFireBreath()
    {
        if (fireBreathFX == null) return;

        fireBreathFX.Stop();
        isBreathingFire = false;
    }

    // ======================
    // ğŸ”¥ ë¶ˆ ë°ë¯¸ì§€ ë°˜ë³µ ì ìš©
    // ======================
    IEnumerator FireDamageLoop()
    {
        PlayerHealth hp = player.GetComponent<PlayerHealth>(); // ğŸ”¥ ì¶”ê°€ëœ ì½”ë“œ

        while (isBreathingFire)
        {
            if (hp != null)
            {
                float dist = Vector3.Distance(transform.position, player.position);

                if (dist < fireDamageDistance)
                {
                    hp.TakeDamage(fireDamageAmount);   // ğŸ”¥ ë°ë¯¸ì§€ ì ìš©
                }
            }

            yield return new WaitForSeconds(fireDamageInterval);
        }
    }
}
